[package]
name = "arfur"
description = "A set of bindings and a framework that builds on top of the WPILib suite, enabling Rust-based robot programs in FRC."
version = "0.0.1"
edition = "2021"
rust-version = "1.62"
license = "MIT"

[features]
default = ["wpilib"]

wpilib = ["arfur-wpilib"]

[dependencies]

[dependencies.arfur-wpilib]
path = "./arfur-wpilib"
version = "0.0.1"
optional = true

[workspace]
members = [ "."
          , "arfur-wpilib"
          , "arfur-build"
          ]
