[package]
name = "arfur"
description = "A set of bindings and a framework that builds on top of the WPILib suite, enabling Rust-based robot programs in FRC."
version = "0.0.1"

license = "MIT"
repository = "https://github.com/arfur-rs/arfur/"

edition = "2021"
rust-version = "1.62"

[features]
default = ["wpilib"]

wpilib = ["arfur-wpilib"]
bindgen = ["arfur-wpilib/bindgen"]

[dependencies]

[dependencies.arfur-wpilib]
path = "./arfur-wpilib"
version = "0.0.1"
optional = true

[workspace]
members = [ "."
          , "arfur-wpilib"
          , "arfur-build"
          , "xtask"
          ]
