[package]
name = "arfur"
description = "A set of bindings and a framework that builds on top of the WPILib suite, enabling Rust-based robot programs in FRC."
version = "0.0.1"

license = "MIT"
repository = "https://github.com/arfur-rs/arfur/"

edition = "2021"
rust-version = "1.62"

[package.metadata.nix]
build = true

[features]
default = ["arfur-wpilib", "arfur-rev"]

bindgen = ["arfur-wpilib/bindgen", "arfur-rev/bindgen"]

[dependencies]

[dependencies.arfur-wpilib]
path = "./arfur-wpilib"
version = "0.0.1"
optional = true

[dependencies.arfur-rev]
path = "./arfur-rev"
version = "0.0.1"
optional = true

[workspace]
members = [ "."
          , "arfur-wpilib"
          , "arfur-rev"
          , "arfur-build"
          , "xtask"
          ]

