[package]
name = "arfur-build"
description = "Internal build tool for Arfur. Not for public use."
version = "0.0.1"

license = "MIT"
repository = "https://github.com/arfur-rs/arfur/"

edition = "2021"
rust-version = "1.62"

[package.metadata.nix]
build = true

[dependencies]
color-eyre = "0.6.2"
once_cell = "1.16.0"
reqwest = "0.11.11"
seahash = "4.1.0"
tracing = "0.1.37"
zip-extract = "0.1.1"

[dependencies.bindgen]
version = "0.60.1"
optional = true
