[package]
name = "arfur-build"
description = "Internal build tool for Arfur. Not for public use."
version = "0.0.2"

license = "MIT"
repository = "https://github.com/arfur-rs/arfur/"

edition = "2021"
rust-version = "1.62"

[package.metadata.nix]
build = true

[dependencies]
color-eyre = "0.6.2"
once_cell = "1.18.0"
reqwest = "0.11.18"
seahash = "4.1.0"
tracing = "0.1.37"
zip-extract = "0.1.2"

[dependencies.bindgen]
version = "0.66.1"
optional = true
