[package]
name = "arfur-wpilib"
description = "Bindings to the WPILib suite."
version = "0.0.1"

license = "MIT"
repository = "https://github.com/arfur-rs/arfur/"

edition = "2021"
rust-version = "1.62"

[package.metadata.nix]
build = true

[features]
bindgen = ["arfur-build/bindgen"]

[dependencies]
derive_builder = "0.11.2"
thiserror = "1.0.32"
tracing = "0.1.36"

[build-dependencies]
color-eyre = "0.6.2"

[build-dependencies.arfur-build]
version = "0.0.2"
path = "../arfur-build"

[build-dependencies.tokio]
version = "1.21.0"
features = ["macros", "rt-multi-thread"]
