[package]
name = "arfur-wpilib"
description = "Bindings to the WPILib suite."
version = "0.0.2"

license = "MIT"
repository = "https://github.com/arfur-rs/arfur/"

edition = "2021"
rust-version = "1.62"

[package.metadata.nix]
build = true

[features]
bindgen = ["arfur-build/bindgen"]

[dependencies]
derive_builder = "0.12.0"
thiserror = "1.0.48"
tracing = "0.1.37"

[build-dependencies]
color-eyre = "0.6.2"

[build-dependencies.arfur-build]
version = "0.0.2"
path = "../arfur-build"

[build-dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]
