[package]
name = "arfhal-sys"
version = "0.0.0"
edition = "2021"
license = "MIT"

[dependencies]

[build-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
color-eyre = "0.6.1"
cfg-if = "1.0.0"
reqwest = "0.11.11"
tempdir = "0.3.7"
zip = "0.6.2"
zip-extract = "0.1.1"
fs_extra = "1.2.0"
bindgen = "0.60.1"

[package.metadata.nix]
build = true
